@@ -1,6 +1,3 @@
 Anil Kumar Saharan
 Email    : aksaharan@yahoo.com
-Homepage : http://www.mycgiserver.com/~anilks
-
-Tausif Ahsan Gilani
-Email : tausifahsan@rediffmail.com
+Homepage : http://www.polarhome.com/~aksaharan
