@@ -32,6 +32,7 @@ make install
 %defattr(-,root,root)
 
 ########### Include Files
+%{_prefix}/include/CUnit/Automated.h
 %{_prefix}/include/CUnit/Console.h
 %{_prefix}/include/CUnit/Curses.h
 %{_prefix}/include/CUnit/CUnit.h
@@ -45,38 +46,25 @@ make install
 %{_prefix}/man/man3/add_test_case.3
 %{_prefix}/man/man3/add_test_group.3
 %{_prefix}/man/man3/ASSERT.3
+%{_prefix}/man/man3/automated_run_tests.3
 %{_prefix}/man/man3/cleanup_registry.3
 %{_prefix}/man/man3/console_run_tests.3
 %{_prefix}/man/man3/curses_run_tests.3
 %{_prefix}/man/man3/get_error.3
 %{_prefix}/man/man3/get_registry.3
 %{_prefix}/man/man3/initialize_registry.3
+%{_prefix}/man/man3/set_output_filename.3
 %{_prefix}/man/man3/set_registry.3 
 %{_prefix}/man/man8/CUnit.8
 
 ########## Share information and Example Files 
+%{_prefix}/share/@PACKAGE@-@VERSION@-@RELEASE@/Example/Automated/README
+%{_prefix}/share/@PACKAGE@-@VERSION@-@RELEASE@/Example/Automated/AutomatedTest
 %{_prefix}/share/@PACKAGE@-@VERSION@-@RELEASE@/Example/Console/README
 %{_prefix}/share/@PACKAGE@-@VERSION@-@RELEASE@/Example/Console/ConsoleTest
 %{_prefix}/share/@PACKAGE@-@VERSION@-@RELEASE@/Example/Curses/README
 %{_prefix}/share/@PACKAGE@-@VERSION@-@RELEASE@/Example/Curses/CursesTest
 
-%changelog
-* Sun Feb 03 2002 Anil Kumar <aksaharan@yahoo.com>
-- Made modifications for moving RPM Creation in the root directory.
-- Cleaned up configure.in for Checks not required and added some additonal
-  header and library checks.
-- Made separate options for gzip, tar, zip and rpm creation in root directory. 
-- Fixed Workspace file for Windows Build.
-
-* Sun Dec 23 2001 Anil Kumar <aksaharan@yahoo.com>
-- Made modifications for change in Directory Structure and Linking Options.
-
-* Sun Nov 25 2001 Anil Kumar <aksaharan@yahoo.com>
-- Added Curses based interface to the Package.
-
-* Sun Oct 28 2001 Anil Kumar <aksaharan@yahoo.com>
-- Integrated RPM creation in the package configuration 
-
-* Sun Oct 21 2001 Anil Kumar <aksaharan@yahoo.com>
-- Added a few Error Codes and respective description.
-- Added code for handling duplicate group/test name 
+# Add the change log in ChangeLog file located under source home directory.
+# The same file is inturn used internally to populate the change log for the RPM
+# creation.
